feat：异步生成向量并逐个更新文档